# barc

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  Developers.md  Dockerfile  Dockerfile.cli  Dockerfile.task  LICENSE  README.md  docker-compose.yml
barc/: Geometry.cpp  Geometry.h  archive_manifest.cc  archive_manifest.h  archive_options.c  archive_options.h  archive_package.c  archive_package.cc  archive_package.h  archive_stream.c  archive_stream.cc  archive_stream.h  audio_mixer.c  audio_mixer.cc  audio_mixer.h  barc.cc  barc.h  curler.c  curler.h  file_audio_source.cc  file_audio_source.h  file_media_source.c  file_media_source.cc  file_media_source.h  file_writer.c  file_writer.h  frame_builder.cc  frame_builder.h  image_source.c  image_source.h  magic_frame.c  magic_frame.h  main.c  media_stream.cc  media_stream.h  object_fit.h  smart_avframe.c  smart_avframe.h  source_container.c  source_container.h  (+8 more)
barc.xcodeproj/: project.pbxproj
barc.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
barc.xcodeproj/project.xcworkspace/xcshareddata/: barc.xcscmblueprint
doc/: Stylesheets.md
docs/: Developers.md  Manifest.md  Stylesheets.md  WebAPI.md  index.md
ext/litehtml/src/: document.cpp  document.h  el_image.cpp  el_image.h  element.cpp  element.h  html_tag.cpp  html_tag.h
task/: index.js  package.json
test/: test_file_writer.cc  test_manifest.json  test_manifest_parser.cc  test_smart_avframe.cc
webapp/: .gitignore  Dockerfile  README.md  app.js  app_internal.js  docker-compose.yml  npm-shrinkwrap.json  package.json  worker.js
webapp/config/: custom-environment-variables.json  default.json  local.json.example
webapp/helpers/: job_helper.js  kennel.js
webapp/model/: job.js
webapp/routes/: index.js  kennel_callback.js
webapp/views/: index.jade
